fix: cards gap

--- a/frontend/src/pages/Store/ProductsList/styles.scss
+++ b/frontend/src/pages/Store/ProductsList/styles.scss
@@ -1,5 +1,5 @@
 .products {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    gap: 1rem;
+    gap: 2rem;
 }
